# iiif-resources

./: README.org  pyproject.toml
src/iiif/resources/: __init__.py
tests/: test_annotation.py  test_canvas.py  test_manifest.py
