[tool.poetry]
name = "iiif-resources"
version = "0.1.0"
description = ""
authors = ["cwulfman <cwulfman@princeton.edu>"]
readme = "README.org"
packages = [{include = "iiif/resources", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
rdflib = "^6.2.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.299"
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
